# tech_events_hub_platform

./: .env.example  .gitignore  LICENSE  Makefile  README.md  pyproject.toml
app/: .env.example  .gitignore  bot.Dockerfile  compose.yaml  frontend.Dockerfile  pyproject.toml  scrapper.Dockerfile
app/.github/workflows/: docker-build.yml
app/docs/: bot-api.yaml  scrapper-api.yaml
app/frontend/: .env.local.example  package.json
app/frontend/src/: middleware.ts
app/frontend/src/app/: layout.tsx  page.tsx
app/frontend/src/components/: add-subscription-dialog.tsx  header.tsx  subscription-card.tsx
app/grafana/dashboards/: business.json  standard.json
app/grafana/provisioning/dashboards/: dashboards.yml
app/migrations/: 00-initial-schema.sql  01-identity-schema.sql  02-subscription-filters.sql  master.xml
app/prometheus/: prometheus.yml
app/src/: main.py  metrics.py  server.py  settings.py
app/src/api/: __init__.py
app/src/api/updates/: handlers.py  schemas.py
app/src/bot/: delivery.py  digest_scheduler.py
app/src/cache/: digest_store.py  list_cache.py  notify_mode_store.py
app/src/clients/: scrapper.py
app/src/handlers/: __init__.py  help.py  list_links.py  notify.py  start.py  track.py  unknown.py  untrack.py
app/src/kafka/: consumer.py
app/src/resilience/: circuit_breaker.py  rate_limiter.py  retry.py
app/src/scrapper/: filters.py  models.py  scheduler.py  server.py  settings.py  telegram_scrapper.py
app/src/scrapper/api/: __init__.py  schemas.py
app/src/scrapper/auth/: dependencies.py  jwt_utils.py  linking_cache.py  yandex_client.py
app/src/scrapper/clients/: bot.py
app/src/scrapper/db/: engine.py  migrations.py  models.py
app/src/scrapper/kafka/: producer.py
app/src/scrapper/llm/: client.py
app/src/scrapper/notification/: abstract.py  email_notification.py  fallback.py  formatter.py  http.py  kafka_notification.py  router.py
app/src/scrapper/repository/: abstract.py  in_memory.py  orm_repository.py  sql_repository.py  storage.py
app/src/scrapper/strategies/: abstract.py  factory.py  playwright_strategy.py  telegram.py  web.py
app/src/scrapper/templates/: event_email.html
app/src/state/: track.py
app/tests/: conftest.py
app/tests/api/: test_updates.py
app/tests/bot/: conftest.py  test_kafka_consumer.py  test_list_cache.py
app/tests/clients/: test_scrapper_client.py
app/tests/handlers/: test_link_parsing.py  test_list_links.py  test_track.py  test_track_validation.py  test_unknown.py  test_untrack.py
app/tests/metrics/: test_metrics.py
app/tests/resilience/: test_circuit_breaker.py  test_fallback.py  test_rate_limiting.py  test_retry.py
app/tests/scrapper/: test_api.py  test_filters.py  test_kafka_notification.py  test_link_validation.py  test_notification_format.py  test_playwright_settings.py  test_repository.py  test_scheduler.py  test_scheduler_filters.py  test_scheduler_llm.py
app/tests/scrapper/api/: test_user_settings.py
(+99 files in other folders)
